# google-bulk-indexer

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
gsc_bulk_indexer/: auth.py  gsc.py  indexer.py  parse.py  submit.py  utils.py
